Fix right alignment for some forms

--- a/src/login/main.css
+++ b/src/login/main.css
@@ -114,7 +114,7 @@
   @apply flex flex-row justify-between;
 }
 
-.kcSignUpClass {
+#kc-registration {
   @apply pt-4 text-right;
 }
 
